--- a/Prj05_TodoList/lista.html
+++ b/Prj05_TodoList/lista.html
@@ -1,1 +1,1 @@
-<ul><li>latte</li><li>pane</li><li>vino</li><li>biscotti</li><li>patatine</li></ul>
+<ul><li>java</li><li>php</li><li>javascript</li><li>c#</li><li>sql</li></ul>
